syntax="proto3";

message Workflow {
  string cwlVersion = 1;
  string class = 2;
  map<string, InputParameter> inputs = 4;
  map<string, OutputParameter> outputs = 5;
  map<string, WorkflowStep> steps = 6;
  string id = 3;

  repeated Requirement requirements  = 7;

}

message Requirement {
  string class = 1;
  repeated string expressionLib = 2;
  repeated Schema types = 3;
}

message Schema {
  string type = 1;
  repeated InputRecordField fields = 2;
  string label = 3;
}

message InputRecordField {
  string name = 1;
  string type = 2;
}

message DockerRequirement {}

message InputParameter {
  string id = 1;
  string type = 2;
  InputBinding inputBinding = 3;
}

message InputBinding {
  uint32 position = 1;
  string prefix = 2;
}

message OutputParameter {
  string id = 1;
}

message ClassOut {
  string type = 1;
  string outputSource = 2;
}

message WorkflowStep {
  string run = 1;
  repeated string out = 2;
  In in = 3;
}

message In {
  map<string, string> inMap = 1;
}
